--- a/manual/complicated_use.ipynb
+++ b/manual/complicated_use.ipynb
@@ -6,7 +6,7 @@
    "source": [
     "# Complicated use\n",
     "\n",
-    "The 'easy_use.ipynb' page of the manual describes (and in fact shows you) how to use the package if you have no idea what you're doing. It gives you control over only a tiny proportion of the capabilities though. This manual describes how to use almost everything. It requires more familiarity with the package though. If you want to expand on this project I recommend you figure out how to make all of these modifications."
+    "The 'easy_use.ipynb' page of the manual describes (and in fact shows you) how to use the package if you have no idea what you're doing. It gives you control over only a tiny proportion of the capabilities though. This manual describes how to use more of the functionality. It requires more familiarity with the package though. This file contains some ideas for how you can customise the package to your own specific case."
    ]
   },
   {
@@ -16,7 +16,7 @@
     "# Reading Simulation files\n",
     "\n",
     "Modifications (general):\n",
-    "1. Add your simulation file to the simulation folder\n",
+    "1. Add your new simulation file to the simulation folder\n",
     "2. Change the constants in 'constants.py' to describe the boundaries of the 2D grid that we will extract from the simulation file\n",
     "\n",
     "Modifications to 'exodus_reader.py':\n",
