A few more improvements to the manuals

--- a/manual/complicated_use.ipynb
+++ b/manual/complicated_use.ipynb
@@ -6,14 +6,14 @@
    "source": [
     "# Complicated use\n",
     "\n",
-    "The 'easy_use.ipynb' page of the manual describes (and in fact shows you) how to use the package if you have no idea what you're doing. It gives you control over only a tiny proportion of the capabilities though. This manual describes how to use more of the functionality. It requires more familiarity with the package though. This file contains some ideas for how you can customise the package to your own specific case."
+    "The 'easy_use.ipynb' page of the manual describes (and in fact shows you) how to use the package if you have no idea what you're doing. It gives you control over only a tiny proportion of the capabilities though. This manual describes how to use more of the functionality. It requires more familiarity with the package though. This file contains some ideas for how you can customise the package to your own specific use case."
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Reading Simulation files\n",
+    "## Reading Simulation files\n",
     "\n",
     "Modifications (general):\n",
     "1. Add your new simulation file to the simulation folder\n",
@@ -33,7 +33,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Field reconstruction and loss calculation\n",
+    "## Field reconstruction and loss calculation\n",
     "\n",
     "Modifications to 'face_model.py':\n",
     "1. Add another field reconstruction algorithm\n",
@@ -63,7 +63,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Optimisation\n",
+    "## Optimisation\n",
     "\n",
     "Modifications to 'optimisers.py':\n",
     "1. Change the kind of optimisation algorithm\n",
@@ -77,7 +77,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Results\n",
+    "## Results\n",
     "\n",
     "Modifications to 'results_management.py':\n",
     "1. Change the file format - save more details about the optimisations so the sensor positions can be more easily accessed\n",
