--- a/manual/easy_use.ipynb
+++ b/manual/easy_use.ipynb
@@ -141,9 +141,7 @@
     "5. Change the time_limit to how long you want to optimise for\n",
     "6. Change the 'Test: ' to whatever you want to rename the start of the pdf of each Pareto optimal point\n",
     "\n",
-    "Run the code and this will optimise for accuracy and reliability. It will then take ages (maybe 10 on a laptop - but this time depends on how many Pareto optimal points were found) to save all of the pdfs of the Pareto optimal layouts into the results folder. When doing this it will print lots of strings looking like OOXOX. This means that it is drawing the graphs for when the sensors in positions 2 and 4 fail.\n",
-    "\n",
-    "Unfortunately Jupyter will then show all of the pdfs below (which will be hundreds if not thousands of pages) and I've not figured out a good way to stop this - any ideas?"
+    "Run the code and this will optimise for accuracy and reliability. It will then take ages (maybe 10 on a laptop - but this time depends on how many Pareto optimal points were found) to save all of the pdfs of the Pareto optimal layouts into the results folder. When doing this it will print lots of strings looking like OOXOX. This means that it is drawing the graphs for when the sensors in positions 2 and 4 fail."
    ]
   },
   {
@@ -302,7 +300,105 @@
       "OOXOOO\n",
       "OOXXOO\n",
       "OOXOXO\n",
-      "OOXOOX\n"
+      "OOXOOX\n",
+      "OOXXXO\n",
+      "OOXXOX\n",
+      "OOXOXX\n",
+      "OOOXOO\n",
+      "OOOXXO\n",
+      "OOOXOX\n",
+      "OOOXXX\n",
+      "OOOOXO\n",
+      "OOOOXX\n",
+      "OOOOOX\n",
+      "\n",
+      "Describing temperature fields...\n",
+      "OOOOOO\n",
+      "XOOOOO\n",
+      "XXOOOO\n",
+      "XOXOOO\n",
+      "XOOXOO\n",
+      "XOOOXO\n",
+      "XOOOOX\n",
+      "XXXOOO\n",
+      "XXOXOO\n",
+      "XXOOXO\n",
+      "XXOOOX\n",
+      "XOXXOO\n",
+      "XOXOXO\n",
+      "XOXOOX\n",
+      "XOOXXO\n",
+      "XOOXOX\n",
+      "XOOOXX\n",
+      "OXOOOO\n",
+      "OXXOOO\n",
+      "OXOXOO\n",
+      "OXOOXO\n",
+      "OXOOOX\n",
+      "OXXXOO\n",
+      "OXXOXO\n",
+      "OXXOOX\n",
+      "OXOXXO\n",
+      "OXOXOX\n",
+      "OXOOXX\n",
+      "OOXOOO\n",
+      "OOXXOO\n",
+      "OOXOXO\n",
+      "OOXOOX\n",
+      "OOXXXO\n",
+      "OOXXOX\n",
+      "OOXOXX\n",
+      "OOOXOO\n",
+      "OOOXXO\n",
+      "OOOXOX\n",
+      "OOOXXX\n",
+      "OOOOXO\n",
+      "OOOOXX\n",
+      "OOOOOX\n",
+      "\n",
+      "Describing temperature fields...\n",
+      "OOOOOO\n",
+      "XOOOOO\n",
+      "XXOOOO\n",
+      "XOXOOO\n",
+      "XOOXOO\n",
+      "XOOOXO\n",
+      "XOOOOX\n",
+      "XXXOOO\n",
+      "XXOXOO\n",
+      "XXOOXO\n",
+      "XXOOOX\n",
+      "XOXXOO\n",
+      "XOXOXO\n",
+      "XOXOOX\n",
+      "XOOXXO\n",
+      "XOOXOX\n",
+      "XOOOXX\n",
+      "OXOOOO\n",
+      "OXXOOO\n",
+      "OXOXOO\n",
+      "OXOOXO\n",
+      "OXOOOX\n",
+      "OXXXOO\n",
+      "OXXOXO\n",
+      "OXXOOX\n",
+      "OXOXXO\n",
+      "OXOXOX\n",
+      "OXOOXX\n",
+      "OOXOOO\n",
+      "OOXXOO\n",
+      "OOXOXO\n",
+      "OOXOOX\n",
+      "OOXXXO\n",
+      "OOXXOX\n",
+      "OOXOXX\n",
+      "OOOXOO\n",
+      "OOOXXO\n",
+      "OOOXOX\n",
+      "OOOXXX\n",
+      "OOOOXO\n",
+      "OOOOXX\n",
+      "OOOOOX\n"
      ]
     }
    ],
