--- a/manual/overview.ipynb
+++ b/manual/overview.ipynb
@@ -14,7 +14,27 @@
    "metadata": {},
    "source": [
     "## What cyclops does\n",
-    "\n"
+    "\n",
+    "The user provides an FEM simulation file of the object to be experimented on (and optionally data about the non-linearity of their sensors).\n",
+    "\n",
+    "They convert the non-linear sensor data to a csv format by running '*src/thermocouple_reader.py*'.\n",
+    "\n",
+    "They convert the temperature field of the potential faces that sensors can be placed on their object into a rectangular grid (either using a pre-defined function or after writing their own custom method) by running '*src/exodus_reader.py*'.\n",
+    "\n",
+    "Then by running '*src/run_me.py*' we can optimise the sensor positions on the potential faces."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## How does cyclops work?\n",
+    "\n",
+    "The optimiser is NGAA-II which is a genetic algorithm so works by generating a population of potential sensor placements and then evolving them towards the Pareto optimal sensor placements (where there is no way to improve the reliability or accuracy without harming the other).\n",
+    "\n",
+    "Given a set of positions for thermocouples we calculate the temperatures at those positions using the FEM simulation data, and take the non-idealities of the thermocouples into account to calculate the thermocouple measurements. Based off the thermocouple measurements we use a machine learning regression model to predict the temperatures throughout the rest of the temperature field.\n",
+    "\n",
+    "We look at all the setups where less than 4 sensors fail to estimate the expected loss and the expected chance of a successful reconstruction (where the sum of the mean squared error between the temperatures at various points in the FEM and ML temperature fields is below a certain LOSS_LIMIT). We assume that the setups where 4 or more sensors fail are so unlikely they have no significant impact on the expected loss, and that all of them result in unsuccessful reconstructions. Otherwise the program would go from taking days to weeks to run."
    ]
   }
  ],
