basic manual finished

--- a/manual/easy_use.ipynb
+++ b/manual/easy_use.ipynb
@@ -46,14 +46,14 @@
    "source": [
     "## Step 1 - simulation to csv\n",
     "\n",
-    "Simulate the temperature field (it is REALLY important that you call your variable 'temperature' - if you don't want to call it this see the 'complicated_use.ipynb' manual) for the experiment you want to optimise in MOOSE (I think any other well known FEM software will work as well - but I'm not 100% sure).\n",
+    "Simulate the temperature field (it is **really** important that you call your variable 'temperature' - if you don't want to call it this see the 'complicated_use.ipynb' manual) for the experiment you want to optimise in MOOSE (I think any other well known FEM software will work as well - but I'm not 100% sure).\n",
     "\n",
     "Copy the resulting exodus file into the simulation folder (I think that any other well known FEM output format will work as well - but again I'm not 100% sure).\n",
     "\n",
     "Make the following changes to the snippet below:\n",
-    "1. Swap 'monoblock_out.e' for the name of your simulation file\n",
+    "1. Swap '*monoblock_out.e*' for the name of your simulation file\n",
     "2. Swap 'generate_side()' for 'generate_front()', or write your own function to get a rectangular grid of values from the simulation file (if you are dealing with a curved surface you will need a clever coordinate system to flatten the curve out - I may or may not manage to provide an example of this)\n",
-    "3. Swap 'test.csv' for the name of the csv file you want to output this grid to \n",
+    "3. Swap '*test.csv*' for the name of the csv file you want to output this grid to \n",
     "\n",
     "Run the code and this will produce a csv file (it will be stored in the simulation folder) corresponding to the face of the experiment you are interested in. The file will be stored in the 'simulation' folder. It will take around 30 seconds to run on a laptop. Once you have done this step once for your simulation file you will never need to do it again."
    ]
@@ -129,7 +129,7 @@
     "## Step 2 - optimise for a specific number of sensors\n",
     "\n",
     "Make the following changes to the snippet below:\n",
-    "1. Change the 'test.csv' to whatever you renamed it to in step 1\n",
+    "1. Change the '*test.csv*' to whatever you renamed it to in step 1\n",
     "2. Change the UniformManager to a SymmetricManager depending on how you want to model the system (do you want to force uniformity in the horizontal direction, or force symmetry?)\n",
     "3. Change the RBFModel to one of GPModel, RBFModel, CTModel, CSModel, or LSModel depending on which algorithm you want to reconstruct the temperature field \n",
     ">* GP is Gaussian Process Regression - only use it for 6 or more sensors\n",
