--- a/manual/overview.ipynb
+++ b/manual/overview.ipynb
@@ -6,7 +6,7 @@
    "source": [
     "# Introduction to cyclops\n",
     "\n",
-    "This manual hopes to give you a brief overview of how cyclops works. After reading this we recommend you go straight to the 'easy_use.ipynb' file to run some optimisations to familiarise yourself with everything."
+    "This manual hopes to give you a brief overview of how cyclops works. After reading this we recommend you go straight to the '*easy_use.ipynb*' file to run some optimisations to familiarise yourself with everything."
    ]
   },
   {
@@ -15,13 +15,17 @@
    "source": [
     "## What cyclops does\n",
     "\n",
-    "The user provides an FEM simulation file of the object to be experimented on (and optionally data about the non-linearity of their sensors).\n",
+    "The user provides a Finite Element Method (FEM) simulation file of the object to be experimented on (and optionally data about the non-linearity of their sensors).\n",
     "\n",
     "They convert the non-linear sensor data to a csv format by running '*src/thermocouple_reader.py*'.\n",
     "\n",
     "They convert the temperature field of the potential faces that sensors can be placed on their object into a rectangular grid (either using a pre-defined function or after writing their own custom method) by running '*src/exodus_reader.py*'.\n",
     "\n",
-    "Then by running '*src/run_me.py*' we can optimise the sensor positions on the potential faces."
+    "Then by running '*src/run_me.py*' we can optimise the sensor positions on the potential faces.\n",
+    "\n",
+    " \n",
+    "\n",
+    "![Overview diagram](overview_diagram.jpg \"Title\")"
    ]
   },
   {
@@ -30,7 +34,7 @@
    "source": [
     "## How does cyclops work?\n",
     "\n",
-    "The optimiser is NGAA-II which is a genetic algorithm so works by generating a population of potential sensor placements and then evolving them towards the Pareto optimal sensor placements (where there is no way to improve the reliability or accuracy without harming the other).\n",
+    "The optimiser is NSGA-II which is a genetic algorithm so works by generating a population of potential sensor placements and then evolving them towards the Pareto optimal sensor placements (where there is no way to improve the reliability or accuracy without harming the other).\n",
     "\n",
     "Given a set of positions for thermocouples we calculate the temperatures at those positions using the FEM simulation data, and take the non-idealities of the thermocouples into account to calculate the thermocouple measurements. Based off the thermocouple measurements we use a machine learning regression model to predict the temperatures throughout the rest of the temperature field.\n",
     "\n",
@@ -45,7 +49,15 @@
    "name": "python3"
   },
   "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
    "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
    "version": "3.11.4"
   },
   "orig_nbformat": 4,
