--- a/manual/easy_use.ipynb
+++ b/manual/easy_use.ipynb
@@ -8,7 +8,7 @@
     "\n",
     "This file allows you to use the entire software package yourself, with minimal programming!\n",
     "\n",
-    "First we convert the necessary data from the FEM simulation into a csv file (step 1).\n",
+    "First we convert the necessary data from the FEM simulation into a csv file (step 1). You will only need to do this step the first time you add the simulation file.\n",
     "\n",
     "Then we optimise it (step 2). You may want to slightly change the code in the step 2 box by putting it in a FOR loop so that it executes for many different numbers of sensors.\n",
     "\n",
@@ -76,7 +76,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 20/20 [00:07<00:00,  2.52it/s]\n"
+      "100%|██████████| 20/20 [00:06<00:00,  2.99it/s]\n"
      ]
     },
     {
@@ -132,7 +132,7 @@
     "1. Change the '*test.csv*' to whatever you renamed it to in step 1\n",
     "2. Change the UniformManager to a SymmetricManager depending on how you want to model the system (do you want to force uniformity in the horizontal direction, or force symmetry?)\n",
     "3. Change the RBFModel to one of GPModel, RBFModel, CTModel, CSModel, or LSModel depending on which algorithm you want to reconstruct the temperature field \n",
-    ">* GP is Gaussian Process Regression - only use it for 6 or more sensors\n",
+    ">* GP is Gaussian Process Regression - only use it for 6 or more sensors as you need more than 3 training datapoints (and up to 3 sensors fail)\n",
     ">* RBF is RBF interpolation\n",
     ">* CT is Clough Tocker interpolation - only use it with the symmetric manager\n",
     ">* CS is Cubic Spline interpolation - only use it with the uniform manager\n",
@@ -146,7 +146,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
