--- a/manual/further_use.ipynb
+++ b/manual/further_use.ipynb
@@ -6,7 +6,7 @@
    "source": [
     "# Further use\n",
     "\n",
-    "The '*easy_use.ipynb*' page of the manual describes (and in fact shows you) how to use the package if you have no idea what you're doing. It gives you control over only a tiny proportion of the capabilities though. This manual describes how to use more of the functionality. It requires more familiarity with the package though. This file contains some ideas for how you can customise the package to your own specific use case."
+    "The '*easy_use.ipynb*' page of the manual describes (and in fact shows you) how to use the package if you have no idea what you're doing. It gives you control over only a tiny proportion of the capabilities though. This manual describes how to use more of the functionality by changing the source code to make it more compatible with your specific use case."
    ]
   },
   {
@@ -17,7 +17,7 @@
     "\n",
     "Modifications (general):\n",
     "1. Add your new simulation file to the simulation folder\n",
-    "2. Change the constants in 'constants.py' to describe the boundaries of the 2D grid that we will extract from the simulation file\n",
+    "2. Change the constants in '*src/constants.py*' to describe the boundaries of the 2D grid that we will extract from the simulation file\n",
     "\n",
     "Modifications to '*src/exodus_reader.py*':\n",
     "1. Sample a different variable instead of 'temperature' by changing the line in the __init__() function\n",
