--- a/manual/easy_use.ipynb
+++ b/manual/easy_use.ipynb
@@ -10,7 +10,7 @@
     "\n",
     "First we convert the necessary data from the FEM simulation into a csv file (step 1). You will only need to do this step the first time you add the simulation file.\n",
     "\n",
-    "Then we optimise it (step 2). You may want to slightly change the code in the step 2 box by putting it in a FOR loop so that it executes for many different numbers of sensors.\n",
+    "Then we optimise it (step 2).\n",
     "\n",
     "Every time you run the code from this file execute the box below. It sorts out some of the paths and some of the graphs."
    ]
@@ -38,16 +38,16 @@
    "source": [
     "## Step 1 - simulation to csv\n",
     "\n",
-    "Simulate the temperature field (it is **really** important that you call your variable 'temperature' - if you don't want to call it this see the 'complicated_use.ipynb' manual) for the experiment you want to optimise in MOOSE (I think any other well known FEM software will work as well - but I'm not 100% sure).\n",
+    "Simulate the temperature field (it is **really** important that you call your variable `temperature` - if you don't want to call it this see the '*complicated_use.ipynb*' manual) for the experiment you want to optimise in MOOSE.\n",
     "\n",
-    "Copy the resulting exodus file into the simulation folder (I think that any other well known FEM output format will work as well - but again I'm not 100% sure).\n",
+    "Copy the resulting exodus file into the simulation folder (I think that any other well known FEM output format will work as well in case you have no idea how to use MOOSE - but again I'm not 100% sure).\n",
     "\n",
     "Make the following changes to the snippet below:\n",
     "1. Swap '*monoblock_out.e*' for the name of your simulation file\n",
-    "2. Swap 'generate_side()' for 'generate_front()', or write your own function to get a rectangular grid of values from the simulation file (if you are dealing with a curved surface you will need a clever coordinate system to flatten the curve out - I may or may not manage to provide an example of this)\n",
+    "2. Swap `generate_side()` for `generate_front()`, or write your own function to get a rectangular grid of values from the simulation file (if you are dealing with a curved surface you will need a clever coordinate system to flatten the curve out - I may or may not manage to provide an example of this)\n",
     "3. Swap '*test.csv*' for the name of the csv file you want to output this grid to \n",
     "\n",
-    "Run the code and this will produce a csv file (it will be stored in the simulation folder) corresponding to the face of the experiment you are interested in. The file will be stored in the 'simulation' folder. It will take around 30 seconds to run on a laptop. Once you have done this step once for your simulation file you will never need to do it again."
+    "Run the code and this will produce a csv file (it will be stored in the simulation folder) corresponding to the face of the experiment you are interested in. The file will be stored in the `simulation` folder. It will take around 30 seconds to run on a laptop. Once you have done this step once for your simulation file you will never need to do it again."
    ]
   },
   {
@@ -73,15 +73,15 @@
     "Make the following changes to the snippet below:\n",
     "1. Change the '*test.csv*' to whatever you renamed it to in step 1\n",
     "2. Change the UniformManager to a SymmetricManager depending on how you want to model the system (do you want to force uniformity in the horizontal direction, or force symmetry?)\n",
-    "3. Change the RBFModel to one of GPModel, RBFModel, CTModel, CSModel, or LSModel depending on which algorithm you want to reconstruct the temperature field \n",
+    "3. Change the `RBFModel` to one of `GPModel`, `RBFModel`, `CTModel`, `CSModel`, or `LSModel` depending on which algorithm you want to reconstruct the temperature field \n",
     ">* GP is Gaussian Process Regression - only use it for 6 or more sensors as you need more than 3 training datapoints (and up to 3 sensors fail)\n",
     ">* RBF is RBF interpolation\n",
     ">* CT is Clough Tocker interpolation - only use it with the symmetric manager\n",
     ">* CS is Cubic Spline interpolation - only use it with the uniform manager\n",
     ">* LS is least squares cubic fit - only use it with the uniform manager\n",
-    "4. Change the num_sensors parameter to whatever number of sensors you want to optimise for\n",
-    "5. Change the time_limit to how long you want to optimise for\n",
-    "6. Change the 'Test: ' to whatever you want to rename the start of the pdf of each Pareto optimal point\n",
+    "4. Change the `num_sensors` to whatever number of sensors you want to optimise for\n",
+    "5. Change the `time_limit` to how long you want to optimise for\n",
+    "6. Change the `'Test: '` to whatever you want to rename the start of the pdf of each Pareto optimal point\n",
     "\n",
     "Run the code and this will optimise for accuracy and reliability. It will then take ages (maybe 10 on a laptop - but this time depends on how many Pareto optimal points were found) to save all of the pdfs of the Pareto optimal layouts into the results folder. When doing this it will print lots of strings looking like OOXOX. This means that it is drawing the graphs for when the sensors in positions 2 and 4 fail."
    ]
@@ -114,7 +114,7 @@
     "\n",
     "The Pareto frontier shows the reliability and accuracy of each optimal sensor placement. Note that it is not a perfect curve as there is a certain ammount of randomness in the evaluation of the loss function. \n",
     "\n",
-    "For each point in the Pareto frontier we produce a pdf report on that sensor setup. On the first page is a bar chart. The inside curve shows what percentage of the time the experiment is successful (the loss is below the LOSS_LIMIT of 1e6). The outside curve shows what percentage of the time various sensors fail.\n",
+    "For each point in the Pareto frontier we produce a pdf report on that sensor setup. On the first page is a bar chart. The inside curve shows what percentage of the time the experiment is successful (the loss is below the `LOSS_LIMIT` of 1e6). The outside curve shows what percentage of the time various sensors fail.\n",
     "\n",
     "The next pages show all of the possibilities where 3 or less sensors fail, and the field reconstruction. The sensors that fail are shown as a red star instead of a black circle."
    ]
