--- a/manual/overview.ipynb
+++ b/manual/overview.ipynb
@@ -38,7 +38,7 @@
     "\n",
     "Given a set of positions for thermocouples we calculate the temperatures at those positions using the FEM simulation data, and take the non-idealities of the thermocouples into account to calculate the thermocouple measurements. Based off the thermocouple measurements we use a machine learning regression model to predict the temperatures throughout the rest of the temperature field.\n",
     "\n",
-    "We look at all the setups where less than 4 sensors fail to estimate the expected loss and the expected chance of a successful reconstruction (where the sum of the mean squared error between the temperatures at various points in the FEM and ML temperature fields is below a certain LOSS_LIMIT). We assume that the setups where 4 or more sensors fail are so unlikely they have no significant impact on the expected loss, and that all of them result in unsuccessful reconstructions. Otherwise the program would go from taking days to weeks to run."
+    "We look at all the setups where less than 4 sensors fail to estimate the expected loss and the expected chance of a successful reconstruction (where the sum of the mean squared error between the temperatures at various points in the FEM and ML temperature fields is below a certain `LOSS_LIMIT`). We assume that the setups where 4 or more sensors fail are so unlikely they have no significant impact on the expected loss, and that all of them result in unsuccessful reconstructions. Otherwise the program would go from taking days to weeks to run."
    ]
   }
  ],
