--- a/manual/further_use.ipynb
+++ b/manual/further_use.ipynb
@@ -36,7 +36,7 @@
     "## Field reconstruction and loss calculation\n",
     "\n",
     "Modifications to '*src/face_model.py*':\n",
-    "1. Add another field reconstruction algorithm\n",
+    "1. Add another field reconstruction algorithm (if so remember to update the dictionaries in '*src/run_me.py*')\n",
     "\n",
     "Modifications to '*src/model_management.py*':\n",
     "1. Change the csv_reader to cope with any extra columns you added or removed in '*src/exodus_reader.py*'\n",
