--- a/manual/assumptions.ipynb
+++ b/manual/assumptions.ipynb
@@ -14,6 +14,8 @@
     "* The FEM temperature field and ML temperature field can be compared well by calculating the MSE between them at many points\n",
     "* We use the Uniform Manager or Symmetric Manager to force symmetry or uniformity in the x-direction\n",
     "* The heuristic NSGA-II method will produce Pareto-optimal results after a long enough time\n",
+    "* The chance of 4 or more sensors failing is so low that these cases have a negligible effect on the expected field reconstruction accuracy\n",
+    "* When 4 or more sensors fail none of these cases count towards the chance of a successful experiment\n",
     "\n",
     "\n",
     "Thermocouples:\n",
