exodus reader improved

--- a/manual/overview.ipynb
+++ b/manual/overview.ipynb
@@ -13,6 +13,21 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "## Function naming\n",
+    "\n",
+    "* `get_` means getter\n",
+    "* `set_` means setter\n",
+    "* `generate_` means generator for initialisation\n",
+    "* `find_` means return a value involving calculation\n",
+    "* `draw_` means show and close a pyplot figure\n",
+    "* `build_` means create a pyplot figure and return it without showing it\n",
+    "* `plot_` means plot a python graph on a given axis"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "## What cyclops does\n",
     "\n",
     "The user provides a Finite Element Method (FEM) simulation file of the object to be experimented on (and optionally data about the non-linearity of their sensors).\n",
