--- a/manual/easy_use.ipynb
+++ b/manual/easy_use.ipynb
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -38,17 +38,34 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Step 1 - simulation to csv\n"
+    "## Step 1 - simulation to csv"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "Reading file...\n",
+      "<meshio mesh object>\n",
+      "  Number of points: 87200\n",
+      "  Number of cells:\n",
+      "    hexahedron27: 2016\n",
+      "    hexahedron27: 3360\n",
+      "    hexahedron27: 4704\n",
+      "  Point sets: right, top, left, , centre_x_bottom_y_back_z, centre_x_bottom_y_front_z, left_x_bottom_y_centre_z, right_x_bottom_y_centre_z\n",
+      "  Point data: disp_x, disp_y, disp_z, temperature\n",
+      "  Cell data: vonmises_stress\n"
+     ]
+    }
+   ],
    "source": [
     "from read_exodus import *\n",
-    "\n",
     "\n",
     "\n",
     "reader = ExodusReader('monoblock_out.e')\n",
@@ -58,12 +75,6 @@
     "pos_3D = reader.read_pos(sensor_region)\n",
     "temps = reader.read_scalar(sensor_region, 'temperature')\n",
     "\n",
-    "disp = np.array([\n",
-    "    reader.read_scalar(sensor_region, 'disp_x'),\n",
-    "    reader.read_scalar(sensor_region, 'disp_y'),\n",
-    "    reader.read_scalar(sensor_region, 'disp_z')\n",
-    "]).T\n",
-    "\n",
     "pos_2D = compress_2D(pos_3D)\n",
     "bounds = find_bounds(pos_2D)\n",
     "grid = generate_grid(bounds, 30, 30)\n",
@@ -71,11 +82,7 @@
     "temp_field = ScalarField(LModel, bounds, 2)\n",
     "temp_field.fit_model(pos_2D, temps)\n",
     "\n",
-    "disp_field = VectorField(LModel, bounds, 2)\n",
-    "disp_field.fit_model(pos_2D, disp)\n",
-    "\n",
     "pickle_manager.save_file('simulation', 'field_temp.obj', temp_field)\n",
-    "pickle_manager.save_file('simulation', 'field_disp.obj', disp_field)\n",
     "pickle_manager.save_file('simulation', 'grid.obj', grid)"
    ]
   }
