--- a/manual/1 simulation processing.ipynb
+++ b/manual/1 simulation processing.ipynb
@@ -4,24 +4,16 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Step 1 - simulation processing\n",
+    "# Simulation processing\n",
     "\n",
     "Here we have some examples about how to process a simulation and save it in the simulation folder ready for optimisation. We have to run the code in the cell below to allow the paths to work in this notebook."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "/home/dharrington/cyclops/src\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "%matplotlib inline\n",
     "import sys\n",
@@ -52,25 +44,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "<meshio mesh object>\n",
-      "  Number of points: 87200\n",
-      "  Number of cells:\n",
-      "    hexahedron27: 2016\n",
-      "    hexahedron27: 3360\n",
-      "    hexahedron27: 4704\n",
-      "  Point sets: right, top, left, , centre_x_bottom_y_back_z, centre_x_bottom_y_front_z, left_x_bottom_y_centre_z, right_x_bottom_y_centre_z\n",
-      "  Point data: disp_x, disp_y, disp_z, temperature\n",
-      "  Cell data: vonmises_stress\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "from sim_reader import *\n",
     "\n",
@@ -107,25 +83,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "<meshio mesh object>\n",
-      "  Number of points: 87200\n",
-      "  Number of cells:\n",
-      "    hexahedron27: 2016\n",
-      "    hexahedron27: 3360\n",
-      "    hexahedron27: 4704\n",
-      "  Point sets: right, top, left, , centre_x_bottom_y_back_z, centre_x_bottom_y_front_z, left_x_bottom_y_centre_z, right_x_bottom_y_centre_z\n",
-      "  Point data: disp_x, disp_y, disp_z, temperature\n",
-      "  Cell data: vonmises_stress\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "from sim_reader import *\n",
     "\n",
@@ -167,7 +127,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -182,57 +142,7 @@
       "    hexahedron27: 4704\n",
       "  Point sets: right, top, left, , centre_x_bottom_y_back_z, centre_x_bottom_y_front_z, left_x_bottom_y_centre_z, right_x_bottom_y_centre_z\n",
       "  Point data: disp_x, disp_y, disp_z, temperature\n",
-      "  Cell data: vonmises_stress\n",
-      "[[0.        ]\n",
-      " [0.00071429]\n",
-      " [0.00142857]\n",
-      " [0.00214286]\n",
-      " [0.00285714]\n",
-      " [0.00357143]\n",
-      " [0.00428571]\n",
-      " [0.005     ]\n",
-      " [0.00571429]\n",
-      " [0.00642857]\n",
-      " [0.00714286]\n",
-      " [0.00785714]\n",
-      " [0.00857143]\n",
-      " [0.00928571]\n",
-      " [0.01      ]\n",
-      " [0.01071429]\n",
-      " [0.01142857]\n",
-      " [0.01214286]\n",
-      " [0.01285714]\n",
-      " [0.01357143]\n",
-      " [0.01428571]\n",
-      " [0.015     ]\n",
-      " [0.01571429]\n",
-      " [0.01642857]\n",
-      " [0.01714286]\n",
-      " [0.01785714]\n",
-      " [0.01857143]\n",
-      " [0.01928571]\n",
-      " [0.02      ]\n",
-      " [0.02071429]\n",
-      " [0.02142857]\n",
-      " [0.02214286]\n",
-      " [0.02285714]\n",
-      " [0.02357143]\n",
-      " [0.02428571]\n",
-      " [0.025     ]\n",
-      " [0.02571429]\n",
-      " [0.02642857]\n",
-      " [0.02714286]\n",
-      " [0.02785714]\n",
-      " [0.02857143]\n",
-      " [0.02928571]\n",
-      " [0.03      ]\n",
-      " [0.03071429]\n",
-      " [0.03142857]\n",
-      " [0.03214286]\n",
-      " [0.03285714]\n",
-      " [0.03357143]\n",
-      " [0.03428571]\n",
-      " [0.035     ]]\n"
+      "  Cell data: vonmises_stress\n"
      ]
     }
    ],
@@ -262,7 +172,8 @@
     "line_temps = temp_field.predict_values(line_2D)\n",
     "line_1D = unfolder.compress_1D(line_2D)\n",
     "\n",
-    "new_line_field = ScalarField(CSModel, [[bounds[0][1]], [bounds[1][1]]], 1)\n",
+    "bounds_1D = [line_1D[0], line_1D[-1]]\n",
+    "new_line_field = ScalarField(CSModel, bounds_1D, 1)\n",
     "new_line_field.fit_model(line_1D, line_temps)\n",
     "\n",
     "# Save the new 1D line field\n",
@@ -281,7 +192,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -330,7 +241,8 @@
     "line_disps = disp_field.predict_values(line_2D)\n",
     "line_1D = unfolder.compress_1D(line_2D)\n",
     "\n",
-    "new_line_field = VectorField(CSModel, [[bounds[0][1]], [bounds[1][1]]], 1)\n",
+    "bounds_1D = [line_1D[0], line_1D[-1]]\n",
+    "new_line_field = VectorField(CSModel, bounds_1D, 1)\n",
     "new_line_field.fit_model(line_1D, line_disps)\n",
     "\n",
     "# Save the new 1D line field\n",
