--- a/manual/1 simulation processing.ipynb
+++ b/manual/1 simulation processing.ipynb
@@ -72,11 +72,14 @@
     }
    ],
    "source": [
-    "from sim_reader import *\n",
-    "\n",
+    "from sim_reader import MeshReader, Unfolder\n",
+    "from fields import ScalarField, VectorField\n",
+    "from regressors import LModel, CSModel\n",
+    "from file_reader import PickleManager\n",
+    "import numpy as np\n",
     "\n",
     "# Define the necessary objects\n",
-    "reader = ExodusReader('monoblock_out.e')\n",
+    "reader = MeshReader('monoblock_out.e')\n",
     "pickle_manager = PickleManager()\n",
     "unfolder = Unfolder()\n",
     "\n",
@@ -107,31 +110,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "<meshio mesh object>\n",
-      "  Number of points: 87200\n",
-      "  Number of cells:\n",
-      "    hexahedron27: 2016\n",
-      "    hexahedron27: 3360\n",
-      "    hexahedron27: 4704\n",
-      "  Point sets: right, top, left, , centre_x_bottom_y_back_z, centre_x_bottom_y_front_z, left_x_bottom_y_centre_z, right_x_bottom_y_centre_z\n",
-      "  Point data: disp_x, disp_y, disp_z, temperature\n",
-      "  Cell data: vonmises_stress\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "from sim_reader import *\n",
-    "\n",
+    "from sim_reader import MeshReader, Unfolder\n",
+    "from fields import ScalarField, VectorField\n",
+    "from regressors import LModel, CSModel\n",
+    "from file_reader import PickleManager\n",
+    "import numpy as np\n",
     "\n",
     "# Define the necessary objects\n",
-    "reader = ExodusReader('monoblock_out.e')\n",
+    "reader = MeshReader('monoblock_out.e')\n",
     "pickle_manager = PickleManager()\n",
     "unfolder = Unfolder()\n",
     "\n",
@@ -167,30 +157,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "<meshio mesh object>\n",
-      "  Number of points: 87200\n",
-      "  Number of cells:\n",
-      "    hexahedron27: 2016\n",
-      "    hexahedron27: 3360\n",
-      "    hexahedron27: 4704\n",
-      "  Point sets: right, top, left, , centre_x_bottom_y_back_z, centre_x_bottom_y_front_z, left_x_bottom_y_centre_z, right_x_bottom_y_centre_z\n",
-      "  Point data: disp_x, disp_y, disp_z, temperature\n",
-      "  Cell data: vonmises_stress\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "from sim_reader import *\n",
+    "from sim_reader import MeshReader, Unfolder\n",
+    "from fields import ScalarField, VectorField\n",
+    "from regressors import LModel, CSModel\n",
+    "from file_reader import PickleManager\n",
+    "import numpy as np\n",
     "\n",
     "# Define the necessary objects\n",
-    "reader = ExodusReader('monoblock_out.e')\n",
+    "reader = MeshReader('monoblock_out.e')\n",
     "pickle_manager = PickleManager()\n",
     "unfolder = Unfolder()\n",
     "\n",
@@ -232,30 +210,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "<meshio mesh object>\n",
-      "  Number of points: 87200\n",
-      "  Number of cells:\n",
-      "    hexahedron27: 2016\n",
-      "    hexahedron27: 3360\n",
-      "    hexahedron27: 4704\n",
-      "  Point sets: right, top, left, , centre_x_bottom_y_back_z, centre_x_bottom_y_front_z, left_x_bottom_y_centre_z, right_x_bottom_y_centre_z\n",
-      "  Point data: disp_x, disp_y, disp_z, temperature\n",
-      "  Cell data: vonmises_stress\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "from sim_reader import *\n",
+    "from sim_reader import MeshReader, Unfolder\n",
+    "from fields import ScalarField, VectorField\n",
+    "from regressors import LModel, CSModel\n",
+    "from file_reader import PickleManager\n",
+    "import numpy as np\n",
     "\n",
     "# Define the necessary objects\n",
-    "reader = ExodusReader('monoblock_out.e')\n",
+    "reader = MeshReader('monoblock_out.e')\n",
     "pickle_manager = PickleManager()\n",
     "unfolder = Unfolder()\n",
     "\n",
