some docstrings done

--- a/manual/0 overview.ipynb
+++ b/manual/0 overview.ipynb
@@ -46,6 +46,9 @@
    "source": [
     "## How does cylcops work?\n",
     "\n",
+    "The package was designed on the Sklearn philosopy of initialise, plan, act. You may judge for yourself if I have succeeded.\n",
+    "\n",
+    "\n",
     "I built a number of machine learning and interpolation regression algorithms in '*regressors.py*'. These have 3 key methods.\n",
     "* `__init__` where they are initialised with the correct hyperparameters.\n",
     "* `fit` where they are fitted to data.\n",
